--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -149,7 +149,7 @@
                         <div class="header-navigation-area d-none d-md-block">
                             <ul class="main-menu nav position-relative">
                                 <li><a href="{% url 'indexing:index' %}">Главная страница</a></li>
-                                <li class="has-submenu"><a href="#">Каталог</a>
+                                <li class="has-submenu"><a href="{% url 'indexing:shop' %}">Каталог</a>
                                     <ul class="submenu-nav">
                                         <li><a href="#">Детская одежда</a></li>
                                         <li><a href="#">Настольные игры</a></li>
