jinja, new pages, edit header and footer

--- a/templates/layout/layout.html
+++ b/templates/layout/layout.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Paradise for Kids - Интернет магазин детских товаров</title>
+    <title>{% block title %}{% endblock %}</title>
 
     <!--== Favicon ==-->
     <link rel="shortcut icon" href="{% static 'assets/img/favicon.ico' %}" type="image/x-icon" />
@@ -55,18 +55,23 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-5 col-md-4 col-lg-6">
                         <div class="header-info-left">
-                            <a href="#">Оплата и доставка</a>
+                            <a href="{% url 'indexing:transport' %}">Оплата и доставка</a>
                             <a>|</a>
                             <a href="{% url 'indexing:contact' %}">Обратная связь</a>
                             <a>|</a>
-                            <a href="#">Политика конфиденциальности</a>
+                            <a href="{% url 'indexing:police' %}">Политика конфиденциальности</a>
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-7 col-md-8 col-lg-6 sm-pl-0 xs-pl-15 header-top-right">
                         <div class="header-info">
                             <a href="tel://+00123456789"><i class="fa fa-phone"></i> +7 499 380 79 36</a>
                             <a href="mailto://demo@example.com"><i class="fa fa-envelope"></i> asdlkqweuir324@gmail.com</a>
-                            <a href="#"><i class="fa fa-user"></i> Авторизация</a>
+                            {% if request.user.is_authenticated %}
+                                <a href="#"><i class="fa fa-user"></i> Личный кабинет</a>
+
+                            {% else %}
+                                <a href="#"><i class="fa fa-user"></i> Авторизация</a>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
@@ -100,11 +105,19 @@
                             </div>
                             <div class="header-align-right">
                                 <div class="header-action-area">
-                                    <div class="header-action-wishlist">
-                                        <button class="btn-wishlist" onclick="window.location.href='shop-wishlist.html'">
-                                            <i class="pe-7s-like"></i>
-                                        </button>
-                                    </div>
+                                    {% if request.user.is_authenticated %}
+                                        <div class="header-action-wishlist">
+                                            <button class="btn-wishlist" onclick="window.location.href=''">
+                                                <i class="pe-7s-like"></i>
+                                            </button>
+                                        </div>
+                                    {% else %}
+                                        <div class="header-action-wishlist">
+                                            <button class="btn-wishlist" onclick="window.location.href=''">
+                                                <i class="pe-7s-user"></i>
+                                            </button>
+                                        </div>
+                                    {% endif %}
                                     <div class="header-action-cart">
                                         <button class="btn-cart cart-icon">
                                             <span class="cart-count">01</span>
@@ -163,30 +176,47 @@
                     </div>
                     <div class="col-8 col-sm-6 col-lg-2">
                         <div class="header-action-area">
-                            <div class="header-action-search">
+                            {% if request.user.is_authenticated %}
+                                <div class="header-action-search">
+                                    <button class="btn-search btn-search-menu">
+                                        <i class="pe-7s-search"></i>
+                                    </button>
+                                </div>
+                                <div class="header-action-login">
+                                    <button class="btn-login" onclick="window.location.href='login-register.html'">
+                                        <i class="pe-7s-users"></i>
+                                    </button>
+                                </div>
+                                <div class="header-action-wishlist">
+                                    <button class="btn-wishlist" onclick="window.location.href='shop-wishlist.html'">
+                                        <i class="pe-7s-like"></i>
+                                    </button>
+                                </div>
+                                <div class="header-action-cart">
+                                    <button class="btn-cart cart-icon">
+                                        <span class="cart-count">01</span>
+                                        <i class="pe-7s-shopbag"></i>
+                                    </button>
+                                </div>
+                                <button class="btn-menu d-lg-none">
+                                    <i class="ion-navicon"></i>
+                                </button>
+                            {% else %}
                                 <button class="btn-search btn-search-menu">
                                     <i class="pe-7s-search"></i>
                                 </button>
-                            </div>
-                            <div class="header-action-login">
-                                <button class="btn-login" onclick="window.location.href='login-register.html'">
-                                    <i class="pe-7s-users"></i>
-                                </button>
-                            </div>
-                            <div class="header-action-wishlist">
-                                <button class="btn-wishlist" onclick="window.location.href='shop-wishlist.html'">
-                                    <i class="pe-7s-like"></i>
-                                </button>
-                            </div>
-                            <div class="header-action-cart">
-                                <button class="btn-cart cart-icon">
-                                    <span class="cart-count">01</span>
-                                    <i class="pe-7s-shopbag"></i>
-                                </button>
-                            </div>
-                            <button class="btn-menu d-lg-none">
-                                <i class="ion-navicon"></i>
-                            </button>
+                                <div class="header-action-cart">
+                                    <button class="btn-cart cart-icon">
+                                        <span class="cart-count">01</span>
+                                        <i class="pe-7s-shopbag"></i>
+                                    </button>
+                                </div>
+                                <div class="header-action-login" style="padding-left: 50px">
+                                    <button class="btn-login" onclick="window.location.href='login-register.html'">
+                                        <i class="pe-7s-users"></i>
+                                    </button>
+                                </div>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
@@ -196,6 +226,8 @@
     <!--== End Header Wrapper ==-->
 
     <main class="main-content">
+        {% block content %}
+        {% endblock %}
     </main>
 
     <!--== Start Footer Area Wrapper ==-->
@@ -206,48 +238,25 @@
                     <div class="col-md-5 col-lg-3">
                         <div class="widget-item item-style3">
                             <div class="about-widget">
-                                <a class="footer-logo" href="index.html">
+                                <a class="footer-logo" href="{% url 'indexing:index' %}">
                                     <img src="{% static 'assets/img/logo-light.png' %}" alt="Logo">
                                 </a>
-                                <p>Lorem ipsum dolor sit amet, consecl adipisicing elit, sed do eiusmod teml incididunt ut labore et dolore magna aliqua Ut enim</p>
-                                <div class="widget-social-icons">
-                                    <a href="#"><i class="ion-social-twitter"></i></a>
-                                    <a href="#"><i class="ion-social-tumblr"></i></a>
-                                    <a href="#"><i class="ion-social-facebook"></i></a>
-                                    <a href="#"><i class="ion-social-instagram-outline"></i></a>
-                                </div>
+                                <p style="font-size: 10px">© Paradise for kids, 2022. Все права на материалы, размещенные на сайте, защищены законодательством об авторском праве и смежных правах и не могут быть воспроизведены или каким-либо образом использованы без письменного разрешения правообладателя.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-3 col-lg-2">
                         <div class="widget-item item-style1">
-                            <h4 class="widget-title">Quick Links</h4>
+                            <h4 class="widget-title">Быстрый доступ</h4>
                             <h4 class="widget-title widget-collapsed-title collapsed" data-bs-toggle="collapse" data-bs-target="#dividerId-1">Quick Links</h4>
                             <div id="dividerId-1" class="collapse widget-collapse-body">
                                 <nav class="widget-menu-wrap">
                                     <ul class="nav-menu nav item-hover-style">
-                                        <li><a href="#">- Support</a></li>
-                                        <li><a href="#">- Helpline</a></li>
-                                        <li><a href="#">- Courses</a></li>
-                                        <li><a href="#">- About</a></li>
-                                        <li><a href="#">- Event</a></li>
-                                    </ul>
-                                </nav>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-lg-2">
-                        <div class="widget-item item-style1">
-                            <h4 class="widget-title">Other Page</h4>
-                            <h4 class="widget-title widget-collapsed-title collapsed" data-bs-toggle="collapse" data-bs-target="#dividerId-2">Other Page</h4>
-                            <div id="dividerId-2" class="collapse widget-collapse-body">
-                                <nav class="widget-menu-wrap item-hover-style">
-                                    <ul class="nav-menu nav">
-                                        <li><a href="about.html">- About</a></li>
-                                        <li><a href="blog.html">- Blog</a></li>
-                                        <li><a href="index.html">- Speakers</a></li>
-                                        <li><a href="contact.html">- Contact</a></li>
-                                        <li><a href="index.html">- Tricket</a></li>
+                                        <li><a href="{% url 'indexing:contact' %}">- Связь с нами</a></li>
+                                        <li><a href="{% url 'indexing:contact' %}">- Помощь</a></li>
+                                        <li><a href="{% url 'indexing:police' %}">- Политика</a></li>
+                                        <li><a href="{% url 'indexing:transport' %}">- Доставка</a></li>
+                                        <li><a href="#">- Акции</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -255,16 +264,33 @@
                     </div>
                     <div class="col-md-5 col-lg-2">
                         <div class="widget-item item-style2">
-                            <h4 class="widget-title">Company</h4>
-                            <h4 class="widget-title widget-collapsed-title collapsed" data-bs-toggle="collapse" data-bs-target="#dividerId-3">Company</h4>
+                            <h4 class="widget-title"></h4>
+                            <h4 class="widget-title widget-collapsed-title collapsed" data-bs-toggle="collapse" data-bs-target="#dividerId-3"></h4>
                             <div id="dividerId-3" class="collapse widget-collapse-body">
                                 <nav class="widget-menu-wrap item-hover-style">
                                     <ul class="nav-menu nav">
-                                        <li><a href="#">- Jesco</a></li>
-                                        <li><a href="#">- Shop</a></li>
-                                        <li><a href="#">- Contact us</a></li>
-                                        <li><a href="#">- Log in</a></li>
-                                        <li><a href="#">- Help</a></li>
+                                        <li><a href="#"></a></li>
+                                        <li><a href="#"></a></li>
+                                        <li><a href="#"></a></li>
+                                        <li><a href="#"></a></li>
+                                        <li><a href="#"></a></li>
+                                    </ul>
+                                </nav>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-5 col-lg-2">
+                        <div class="widget-item item-style2">
+                            <h4 class="widget-title"></h4>
+                            <h4 class="widget-title widget-collapsed-title collapsed" data-bs-toggle="collapse" data-bs-target="#dividerId-3"></h4>
+                            <div id="dividerId-3" class="collapse widget-collapse-body">
+                                <nav class="widget-menu-wrap item-hover-style">
+                                    <ul class="nav-menu nav">
+                                        <li><a href="#"></a></li>
+                                        <li><a href="#"></a></li>
+                                        <li><a href="#"></a></li>
+                                        <li><a href="#"></a></li>
+                                        <li><a href="#"></a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -272,7 +298,7 @@
                     </div>
                     <div class="col-md-7 col-lg-3">
                         <div class="widget-item">
-                            <h4 class="widget-title">Store Information.</h4>
+                            <h4 class="widget-title">Информация о магазине.</h4>
                             <h4 class="widget-title widget-collapsed-title collapsed" data-bs-toggle="collapse" data-bs-target="#dividerId-4">Store Information.</h4>
                             <div id="dividerId-4" class="collapse widget-collapse-body">
                                 <p class="widget-address">2005 Your Address Goes Here. <br>896, Address 10010, HGJ</p>
@@ -282,7 +308,7 @@
                                 </ul>
                                 <div class="widget-payment-info">
                                     <div class="thumb">
-                                        <a href="index.html"><img src="{% static 'assets/img/photos/payment1.png' %}" alt="Image"></a>
+                                        <a href="{% url 'indexing:transport' %}"><img src="{% static 'assets/img/photos/payment1.png' %}" alt="Image"></a>
                                     </div>
                                 </div>
                             </div>
@@ -297,7 +323,7 @@
                     <div class="row text-center">
                         <div class="col-sm-12">
                             <div class="widget-copyright">
-                                <p><i class="fa fa-copyright"></i> 2021 <span>KIDOL. </span> Made with <i class="fa fa-heart"></i> by <a target="_blank" href="https://www.hasthemes.com">HasThemes</a></p>
+                                <p><i class="fa fa-copyright"></i> Paradise for kids, 2022. Все права на материалы, размещенные на сайте, защищены законодательством об авторском праве</p>
                             </div>
                         </div>
                     </div>
@@ -316,12 +342,12 @@
         <div class="search-box-content-inner">
             <div class="search-box-form-wrap">
                 <div class="search-note">
-                    <p>Start typing and press Enter to search</p>
+                    <p>Помошник в поиске нужного вам товара</p>
                 </div>
                 <form action="#" method="post">
                     <div class="search-form position-relative">
-                        <label for="search-input" class="sr-only">Search</label>
-                        <input type="search" class="form-control" placeholder="Search" id="search-input">
+                        <label for="search-input" class="sr-only">Поиск по сайту</label>
+                        <input type="search" class="form-control" placeholder="Найти товар" id="search-input">
                         <button class="search-button"><i class="pe-7s-search"></i></button>
                     </div>
                 </form>
